# calc

./: CMakeLists.txt  README.md  calc.c  main.c  test.c
include/: calc.h
